2008-11-25  Mark Grondona <mgrondona@llnl.gov>

	* config/ac_ssh.m4, configure :
	  Allow --without-ssh-connect-timeout-option (passed to ./configure) 
	  to disable SSH connect timeout option in addition to 
	  --with-ssh-connect-timeout=none.

2008-10-21  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/pcp_client.c (_pcp_sendfile) :
	  Do not return -1 from _pcp_sendfile as this causes early abort from 
	  list_for_each. Return 0 instead to fix recursive pdcp.

2008-09-26  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c, doc/pdcp.1.in : 
	  Add pdcp -e option to explicitly specify remote path to pdcp binary.

2008-09-22  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.17.

	* config/ac_ssh.m4, configure :
	  Don't use -q option to grep.

	* Makefile.in, config.h.in, config/Makefile.in,
	  configure, doc/Makefile.in, etc/Makefile.in,
	  scripts/Makefile.in, src/Makefile.in, src/common/Makefile.in,
	  src/modules/Makefile.in, src/pdsh/Makefile.in, 
	  src/qsnet/Makefile.in, testsuite/Makefile.in, 
	  testsuite/pdsh.test/Makefile.in :
	  Re-run ./bootstrap.

	* config/acx_pthread.m4 :
	  Update to latest version of ACX_PTHREAD macro from 
	  autoconf-archive.cryp.to/acx_pthread.html.

2008-09-18  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c :
	  Ignore multiple consecutive colons in host list supplied to -w and
	  other target host input methods. Thus foo::bar is no longer treated
	  as rcmd_type = foo, and target host = :bar. Instead the target host
	  is just foo::bar. This behavior is probably more correct and least
	  surprising to users (who probably rarely use the rcmd_type:hosts
	  syntax). Plus, there is at least one user making use of proxy::hosts
	  to handle automatic proxying of ssh connections.

2008-09-03  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/xpopen.c : glibc 2.8 no longer defines ARG_MAX.
	  Use sysconf (_SC_ARG_MAX) instead if it is available.
	  Fix provided by Tom 'spot' Callaway via sf.net.
