@@ -1,3 +1,8 @@
+2009-03-24  Mark Grondona <mgrondona@llnl.gov>
+
+	* doc/pdsh.1.in : 
+	  Add more detail to pdsh manpage about nodeattr module.
+
 2008-11-25  Mark Grondona <mgrondona@llnl.gov>
 
 	* config/ac_ssh.m4, configure :
